# ops-fft

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  OAT.xml  QUICKSTART.md  README.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  hipfft_api_reference.md  hiptensor_api_reference.md  install_deps.sh  version.cmake
cmake/: func.cmake  init_env.cmake  makeself_built_in.cmake  package.cmake  variables.cmake
docs/: README.md  implementation.md
docs/zh/: op_list.md
docs/zh/API Reference/: FFT_1D.md  FFT_2D.md  FFT公共接口.md  README.md
docs/zh/context/: build.md  dir_structure.md  quick_install.md
docs/zh/debug/: op_debug_prof.md
docs/zh/design/: fft_handle_design.md  ops_tensor_api_design.md  ops_tensor_feature_roadmap.md  ops_tensor_phase1_elementwise_plan.md
docs/zh/develop/: operator_development_guide.md  test_writing_guide.md
docs/zh/fft/: FFT_1D.md
docs/zh/invocation/: quick_op_invocation.md
include/: cann_ops_fft.h
lib/: CMakeLists.txt  fft_error.h  fft_exec_api.cpp  fft_handle_impl.h  fft_plan_api.cpp  fft_plan_destroy_api.cpp  fft_plan_init_api.cpp  fft_stream_api.cpp  fft_utils_api.cpp
scripts/package/module/ascend/: OpsFft.xml  OpsFftInc.xml
scripts/package/ops_fft/: ops_fft.xml
scripts/package/ops_fft/scripts/: help.info  install.sh  opp_common.sh  opp_install.sh  opp_uninstall.sh  uninstall.sh  ver_check.sh
src/: CMakeLists.txt
src/common/: fft_common_core.h  fft_common_kernel.h  fft_exec_helper.h  mma.h  test_helper.py  utils.h
src/common/iterators/: gm_to_l1_iterator.inc  gm_to_ub_iterator.inc  l0c_to_gm_iterator.inc  l0c_to_l1_iterator.inc  l0c_to_ub_iterator.inc  l1_to_bt_iterator.inc  l1_to_fb_iterator.inc  l1_to_l0_iterator.inc  l1_to_ub_iterator.inc
src/common/kernel/: common.h  common_func.h  hardware.h  iterator.h  layout.h  mem.h  set_fpc.h  simd.h
src/common/kernel/iterators/: l0c_to_gm_iterator.inc
src/dft_r2_c/: CMakeLists.txt  dft_r2_c_host.cpp  dft_r2_c_host.h  dft_r2_c_kernel.cpp
src/dft_r2_c/tests/: dft_r2_c_test.cpp  dft_r2_c_test.h
src/fft1_d/: CMakeLists.txt  fft1_d.h
src/fft1_d/arch32/: fft1_d_exec_api.cpp
src/fft1_d/arch32/dft/: fft1_d_dft.cpp  fft1_d_dft_kernel.h  fft1_d_dft_tilingdata.h
src/fft1_d/arch32/fft_b/: fft1_d_b.cpp  fft1_d_b_kernel.h  fft1_d_b_tilingdata.h
src/fft1_d/arch32/fft_n/: fft1_d_n.cpp  fft1_d_n_kernel.h  fft1_d_n_tilingdata.h
src/fft1_d/arch32/fft_stride/: fft1_d_stride.cpp  fft1_d_stride_kernel.h  fft1_d_stride_tilingdata.h
src/fft1_d/arch35/: fft1_d_exec_api.cpp
src/fft1_d/arch35/c2c/: fft1_d_c2c.cpp  fft1_d_c2c_kernel.h  fft1_d_c2c_tilingdata.h
src/fft1_d/tests/: fft1_d_test.h  fft1_d_test_arch32.cpp  fft1_d_test_arch35.cpp
src/fft1_d/tests/fft1_d_data/: compare_data.py  gen_data.py
src/fft2_d/: CMakeLists.txt  fft2_d.h
src/fft2_d/arch32/: fft2_d_exec_api.cpp
src/fft2_d/arch32/dd/: fft2_d_dd.cpp  fft2_d_dd_kernel.h  fft2_d_dd_tilingdata.h
src/fft2_d/tests/: fft2_d_test.h  fft2_d_test_arch32.cpp
src/fft2_d/tests/fft2_d_data/: compare_data.py  gen_data.py
src/irfft1_d/: CMakeLists.txt  irfft1_d.h
src/irfft1_d/arch32/: irfft1_d_exec_api.cpp
src/irfft1_d/arch32/dft/: irfft1_d_dft.cpp  irfft1_d_dft_kernel.h  irfft1_d_dft_tilingdata.h
src/irfft1_d/arch35/: irfft1_d_exec_api.cpp
src/irfft1_d/arch35/dft/: irfft1_d_dft.cpp  irfft1_d_dft_kernel.h  irfft1_d_dft_tilingdata.h
src/irfft1_d/tests/: irfft1_d_test.h  irfft1_d_test_arch32.cpp  irfft1_d_test_arch35.cpp
src/irfft1_d/tests/irfft1_d_data/: compare_data.py  gen_data.py
src/rfft1_d/: CMakeLists.txt  rfft1_d.cpp  rfft1_d.h
src/rfft1_d/arch32/: rfft1_d_exec_api.cpp
src/rfft1_d/arch32/dft/: rfft1_d_dft.cpp  rfft1_d_dft_kernel.h  rfft1_d_dft_tilingdata.h
src/rfft1_d/arch35/: rfft1_d_bluestein.h  rfft1_d_colley_tukey.h  rfft1_d_exec_api.cpp  rfft1_d_fast.h  rfft1_d_tilingdata.h
src/rfft1_d/arch35/fast_dft/: rfft1_d_fast.h  rfft1_d_fast_dft.cpp  rfft1_d_tilingdata.h
src/rfft1_d/arch35/fft/: rfft1_d_fft.cpp  rfft1_d_fft_kernel.h  rfft1_d_fft_tilingdata.h
src/rfft1_d/tests/: rfft1_d_test.cpp  rfft1_d_test.h  rfft1_d_test_arch32.cpp  rfft1_d_test_arch35.cpp
src/rfft1_d/tests/rfft1_d_data/: compare_data.py  gen_data.py
src/rfft1_d/tests/scripts/: generate_rfft_expected.py
src/rfft1_d/tests/utils/: rfft_expected_loader.h
tests/: CMakeLists.txt  all_tests.cpp.in  test_common.cpp  test_common.h
